// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`properties/person > select user - cancel 1`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        <div
          class="react-select__single-value"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
            <button
              aria-label="Clear"
              class="Person-clear"
              title="Clear"
              type="button"
            >
              <i
                class="CompassIcon icon-close"
              />
            </button>
          </div>
        </div>
        
        <input
          aria-controls="cl-2"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`properties/person > select user - cancel 2`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        <div
          class="react-select__single-value"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
            <button
              aria-label="Clear"
              class="Person-clear"
              title="Clear"
              type="button"
            >
              <i
                class="CompassIcon icon-close"
              />
            </button>
          </div>
        </div>
        
        <input
          aria-activedescendant="cl-2-option-1"
          aria-controls="cl-2"
          aria-expanded="true"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu react-select__menu "
    >
      <div
        class="react-select__menu-list"
        id="cl-2"
        role="listbox"
      >
        
        <div
          class="react-select__group-heading"
        >
          Not board members
        </div>
        <div
          aria-selected="false"
          class="react-select__option react-select__option--is-focused"
          id="cl-2-option-1"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-4
            
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-2-option-2"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-5
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`properties/person > select user - confirm 1`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        <div
          class="react-select__single-value"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
            <button
              aria-label="Clear"
              class="Person-clear"
              title="Clear"
              type="button"
            >
              <i
                class="CompassIcon icon-close"
              />
            </button>
          </div>
        </div>
        
        <input
          aria-controls="cl-0"
          aria-expanded="false"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    
  </div>
</div>
`;

exports[`properties/person > select user - confirm 2`] = `
<div>
  <div
    class="Combobox Person octo-propertyvalue"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="Combobox__live-region"
      role="log"
    />
    <div
      class="react-select__control"
    >
      <div
        class="react-select__value-container"
      >
        
        <div
          class="react-select__single-value"
        >
          <div
            class="Person-item"
          >
            
            username-1
            
            <button
              aria-label="Clear"
              class="Person-clear"
              title="Clear"
              type="button"
            >
              <i
                class="CompassIcon icon-close"
              />
            </button>
          </div>
        </div>
        
        <input
          aria-activedescendant="cl-0-option-1"
          aria-controls="cl-0"
          aria-expanded="true"
          autocomplete="off"
          class="Combobox__input react-select__input"
          role="combobox"
          type="text"
        />
      </div>
      
    </div>
    <div
      class="Combobox__menu react-select__menu "
    >
      <div
        class="react-select__menu-list"
        id="cl-0"
        role="listbox"
      >
        
        <div
          class="react-select__group-heading"
        >
          Not board members
        </div>
        <div
          aria-selected="false"
          class="react-select__option react-select__option--is-focused"
          id="cl-0-option-1"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-4
            
            
          </div>
        </div>
        <div
          aria-selected="false"
          class="react-select__option"
          id="cl-0-option-2"
          role="option"
        >
          <div
            class="Person-item"
          >
            
            username-5
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
